resources/after/production/keptn/fd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: keptn-ingress
  namespace: keptn
spec:
  rules:
  - host: "keptn.ortelius.io"
    http:
      paths:
      - backend:
          service:
            name: api-gateway-nginx
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: "ortelius.z01.azurefd.net"
    http:
      paths:
      - backend:
          service:
            name: api-gateway-nginx
            port:
              number: 80
        path: /
        pathType: Prefix
  - http:
      paths:
      - backend:
          service:
            name: api-gateway-nginx
            port:
              number: 80
        path: /keptn
        pathType: Prefix
